# markadoros

./: .gitignore  LICENSE  README.md  pyproject.toml
src/markadoros/: __init__.py  assembler_runners.py  bold_tsv_processor.py  cli.py  constants.py  contig_searcher.py  database_creator.py  database_fasta_processor.py  database_index.py  databases.py  fasta_processor.py  header_processor.py  input_types.py  marker_database_builder.py  mmseqs_database_builder.py  read_analyser.py  read_assembler.py  read_preprocessor.py  search_pipeline.py  short_read_analyser.py  spades.py  utils.py
src/markadoros/data/: __init__.py  bold.json  unite.json
