[project]
name = "markadoros"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jim Downie", email = "jd42@sanger.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "click>=8.3.1",
    "pymmseqs>=1.0.5",
    "pysam>=0.23.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
markadoros = "markadoros:cli"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
