[project]
name = "markadoros"
version = "0.9.0"
description = "Markadoros is a tool for the identification and assembly of barcode genes in raw sequencing data."
readme = "README.md"
authors = [
    { name = "Jim Downie", email = "jd42@sanger.ac.uk" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.86",
    "click>=8.3.1",
    "jsonschema>=4.26.0",
    "pandas>=2.3.3",
    "pymmseqs>=1.0.5",
    "pysam>=0.23.3",
    "scikit-learn>=1.8.0",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sanger-tol/markadoros/"
Issues = "https://github.com/sanger-tol/markadoros/issues"

[project.scripts]
markadoros = "markadoros:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/markadoros"]
include = [
    "/src/markadoros/data/bold.json",
    "/src/markadoros/data/unite.json",
]

[build-system]
build-backend  = 'hatchling.build'
requires       = ['hatchling']

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.3.4"]
